Fix height issue with sub content on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ nav li {
   background-image: url("../img/kohtao.jpg");
   height: 40vh;
   background-size: cover;
+  overflow: hidden;
 }
 
 /*.mainContent img {
@@ -183,15 +184,19 @@ nav li {
     margin: .5em;
   }
 
-  .mainContent img {
+  .mainContent {
+    height: 64.6vh;
+  }
+
+  /*.mainContent img {
     width: 100%;
     height: 65vh;
     object-fit: cover;
-  }
-
-  /*.subContent {
-    height: 50vh;
   }*/
+
+  .subContent {
+    height: 20vh;
+  }
 
   .subContent1 {
     float: left;
